--- a/BR-template-index.html
+++ b/BR-template-index.html
@@ -288,7 +288,7 @@
       </section><!-- End Section VIDEO TRAINING  -->
 
       <!-- Section SLIDER -->
-      <section class="mt-5 pb-3 bg-light overflow-hidden">
+      <section class="mt-5 pb-3 bg-light">
         <div class="container py-5" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
             <div class="col-sm-8 text-center">
