--- a/AL-template-index.html
+++ b/AL-template-index.html
@@ -278,9 +278,9 @@
         <div class="alpitour-player container" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
-              <video id="player" controls crossorigin playsinline poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg" >
+              <video id="player" controls crossorigin poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg">
                 <!-- Video files -->
-                <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4" size="576">
+                <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4" size="576" >
             </video>
   
             </div>
@@ -289,7 +289,7 @@
       </section><!-- End Section VIDEO TRAINING  -->
 
       <!-- Section SLIDER -->
-      <section class="mt-5 pb-3 bg-light">
+      <section class="mt-5 pb-3 bg-light overflow-hidden">
         <div class="container py-5" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
             <div class="col-sm-8 text-center">
