--- a/BR-template-index.html
+++ b/BR-template-index.html
@@ -72,7 +72,7 @@
           <div class="row row-cols-1 row-cols-lg-3 g-5 d-flex justify-content-center align-items-stretch">
   
             <div class="col d-flex" data-aos="fade-up">
-              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-francorosso border-2 rounded position-relative">
+              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-bravo border-2 rounded position-relative">
                 <div class="number-badge bg-bravo rounded-circle text-light position-absolute top-0 start-50 translate-middle d-flex align-items-center justify-content-center fw-bold">
                   1
                 </div>
@@ -85,7 +85,7 @@
             </div><!-- /item -->
   
             <div class="col d-flex" data-aos="fade-up" data-aos-delay="100">
-              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-francorosso border-2 rounded position-relative">
+              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-bravo border-2 rounded position-relative">
                 <div class="number-badge bg-bravo rounded-circle text-light position-absolute top-0 start-50 translate-middle d-flex align-items-center justify-content-center fw-bold">
                   2
                 </div>
@@ -98,7 +98,7 @@
             </div><!-- /item -->
   
             <div class="col d-flex" data-aos="fade-up" data-aos-delay="200">
-              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-francorosso border-2 rounded position-relative">
+              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-bravo border-2 rounded position-relative">
                 <div class="number-badge bg-bravo rounded-circle text-light position-absolute top-0 start-50 translate-middle d-flex align-items-center justify-content-center fw-bold">
                   3
                 </div>
@@ -111,7 +111,7 @@
             </div><!-- /item -->
   
             <div class="col d-flex" data-aos="fade-up" data-aos-delay="0">
-              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-francorosso border-2 rounded position-relative">
+              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-bravo border-2 rounded position-relative">
                 <div class="number-badge bg-bravo rounded-circle text-light position-absolute top-0 start-50 translate-middle d-flex align-items-center justify-content-center fw-bold">
                   4
                 </div>
@@ -124,7 +124,7 @@
             </div><!-- /item -->
   
             <div class="col d-flex" data-aos="fade-up" data-aos-delay="100">
-              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-francorosso border-2 rounded position-relative">
+              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-bravo border-2 rounded position-relative">
                 <div class="number-badge bg-bravo rounded-circle text-light position-absolute top-0 start-50 translate-middle d-flex align-items-center justify-content-center fw-bold">
                   5
                 </div>
@@ -137,7 +137,7 @@
             </div><!-- /item -->
 
             <!--<div class="col d-flex" data-aos="fade-up">
-              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-francorosso border-2 rounded position-relative">
+              <div class="p-3 flex-grow-1 align-items-stretch d-flex border border-bravo border-2 rounded position-relative">
                 <div class="number-badge bg-bravo rounded-circle text-light position-absolute top-0 start-50 translate-middle d-flex align-items-center justify-content-center fw-bold">
                   6
                 </div>
