fix video, scroll arrow

--- a/AL-template-index.html
+++ b/AL-template-index.html
@@ -10,13 +10,13 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/01035a5a33.js" crossorigin="anonymous"></script>
     <!-- Plyr -->
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" /> -->
     <!-- Swiper -->
     <link rel='stylesheet' href='https://unpkg.com/swiper/swiper-bundle.min.css'>
 
     <link rel="stylesheet" href="css/main.min.css">
 
-    <title>Progetto Mainstream - Template scheda Alpitour</title>
+    <title>Progetto Mainstream - Schede</title>
 
     <!-- Favicon -->
     <link rel="icon" href="https://www.alpitour.it/favicon.ico">
@@ -44,13 +44,16 @@
     <main>
 
       <!-- Structure Title -->
-      <section id="structure-title" class="mt-5 pt-5">
+      <section id="structure-title" class="mt-2 pt-2">
         <div class="container">
           <div class="row">
             <div class="col text-center">
               <img src="https://image.email.awtrade-alpitour.it/lib/fe41117175640479741671/m/1/7df544e8-31da-4170-8820-54307e5c0973.png" height="40px" class="navbar-brand" alt="Logo Alpitour">
               <h1 class="text-alpitour">Structure name</h1>
               <p class="lead text-uppercase"><span class="fw-bold">Destination</span> | Place</p>
+              <div class="bounce pt-5">
+                <i class="text-alpitour bi bi-arrow-down"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -58,7 +61,7 @@
       <!-- End Structure Title -->
 
       <!-- Section WHY -->
-      <section class="my-5">
+      <section class="mt-1 mb-5">
 
         <div class="container py-5" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
@@ -259,7 +262,7 @@
         <div class="container py-5" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
             <div class="col-sm-8 text-center">
-              <h2 class="text-alpitour">Talking gallery</h2>
+              <h2 class="text-alpitour">Taling gallery</h2>
               <p class="lead">Tutto quello che devi sapere in 100 secondi raccontato da uno dei nostri esperti di destinazione.</p>
             </div>
           </div>
@@ -275,14 +278,12 @@
           </div>
         </div><!-- End Profile -->
   
-        <div class="alpitour-player container" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
-              <video id="player" controls crossorigin poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg">
-                <!-- Video files -->
-                <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4" size="576" >
-            </video>
-  
+              <div class="ratio ratio-16x9">
+                <iframe width='480' height='270' src='//ac022fe.streamcloud.it/embed/vod/4913?autostart=false' frameborder=0 allowfullscreen></iframe>
+              </div>
             </div>
           </div>
         </div><!-- End Video -->
@@ -294,7 +295,7 @@
           <div class="row d-flex justify-content-center">
             <div class="col-sm-8 text-center">
               <h2 class="text-alpitour">Potrebbe anche interessarti</h2>
-              <p class="lead">Materiale aggiuntivo per approfondire la tua conoscenza della struttra, per viverla in prima persona o per promuoverla ai tuoi clienti.</p>
+              <p class="lead">Materiale aggiuntivo per approfondire la tua conoscenza della struttra, per viverla in prima persona o per promuoverla con i tuoi clienti.</p>
             </div>
           </div>
         </div><!-- End Title -->
@@ -310,7 +311,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -323,7 +324,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -336,7 +337,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.  This is some text within a card body. This is some text within a card body. This is some text within a card</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -349,7 +350,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -362,7 +363,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.  This is some text within a card body. This is some text within a card body. This is some text within a card</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -375,7 +376,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -388,7 +389,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.  This is some text within a card body. This is some text within a card body. This is some text within a card</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -401,7 +402,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -414,7 +415,7 @@
                     <div class="card-body">
                       <h5 class="card-title">Card title</h5>
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.  This is some text within a card body. This is some text within a card body. This is some text within a card</p>
-                      <a href="#" target="_blank" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
+                      <a href="#" class="link-alpitour">Vedi <i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -441,7 +442,7 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Plyr -->
-    <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
+    <!-- <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script> -->
     <!-- Swiper -->
     <script src='https://unpkg.com/swiper/swiper-bundle.min.js'></script>
 
