--- a/BR-template-index.html
+++ b/BR-template-index.html
@@ -10,7 +10,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/01035a5a33.js" crossorigin="anonymous"></script>
     <!-- Plyr -->
-    <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.6.12/plyr.css" /> -->
     <!-- Swiper -->
     <link rel='stylesheet' href='https://unpkg.com/swiper/swiper-bundle.min.css'>
 
@@ -44,12 +44,15 @@
     <main>
 
       <!-- Structure Title -->
-      <section id="structure-title" class="mt-5 pt-5">
+      <section id="structure-title" class="mt-2 pt-2">
         <div class="container">
           <div class="row">
             <div class="col text-center">
               <h1 class="text-bravo">Structure name</h1>
               <p class="lead text-uppercase"><span class="fw-bold">Destination</span> | Place</p>
+              <div class="bounce pt-5">
+                <i class="text-bravo bi bi-arrow-down"></i>
+              </div>
             </div>
           </div>
         </div>
@@ -57,7 +60,7 @@
       <!-- End Structure Title -->
 
       <!-- Section WHY -->
-      <section class="my-5">
+      <section class="mt-1 mb-5">
 
         <div class="container py-5" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
@@ -274,14 +277,12 @@
           </div>
         </div><!-- End Profile -->
   
-        <div class="bravo-player container" data-aos="fade-up">
+        <div class="container" data-aos="fade-up">
           <div class="row d-flex justify-content-center">
             <div class="col-lg-8">
-              <video id="player" controls crossorigin poster="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.jpg" >
-                <!-- Video files -->
-                <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-576p.mp4" type="video/mp4" size="576">
-            </video>
-  
+              <div class="ratio ratio-16x9">
+                <iframe width='480' height='270' src='//ac022fe.streamcloud.it/embed/vod/4913?autostart=false' frameborder=0 allowfullscreen></iframe>
+              </div>
             </div>
           </div>
         </div><!-- End Video -->
@@ -440,7 +441,7 @@
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- Plyr -->
-    <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script>
+    <!-- <script src="https://cdn.plyr.io/3.6.12/plyr.js"></script> -->
     <!-- Swiper -->
     <script src='https://unpkg.com/swiper/swiper-bundle.min.js'></script>
 
